# corbusier

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  diesel.toml  diesel_schema_patch.rs  typos.local.toml  typos.toml
.cargo/: config.toml
.config/: nextest.toml
.factory/: settings.json
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  coverage-main.yml  dependabot-automerge.yml
charts/corbusier/: Chart.yaml  values.local.yaml  values.schema.json  values.yaml
docs/: adr-001-runtime-boundary-between-corbusier-and-podbot.md  adr-002-workspace-runtime-model-and-source-policy.md  adr-003-mcp-wire-model-and-tool-plane-ownership.md  adr-004-canonical-mcp-source-taxonomy-and-legacy-transport-migration.md  adr-005-hook-execution-contract-and-control-channel-semantics.md  adr-006-durable-runtime-state-and-audit-model.md  adr-007-prompt-skill-and-bundle-document-model.md  adr-008-prompt-validation-semantics-and-capability-dispositions.md  adr-009-security-and-privilege-boundary-defaults.md  adr-010-migration-and-coexistence-strategy.md  adr-011-corbusier-frankie-review-adapter-role-segregation.md  contents.md  corbusier-api-design.md  corbusier-design.md  dependency-policy-exception-actix-v2a.md  developers-guide.md  documentation-style-guide.md  local-k8s-preview-design.md  ortho-config-users-guide.md  pg-embed-setup-unpriv-users-guide.md  podbot-conformance-design-for-agents-mcp-wires-and-hooks.md  podbot-migration-review-checklist.md  repository-layout.md  roadmap-writing-guide.md  roadmap.md  rstest-bdd-users-guide.md  users-guide.md  whitaker-users-guide.md
docs/execplans/: 1-1-1-canonical-message-format-and-validation.md  1-1-1-ratify-the-staged-migration-boundary-and-phase-gates.md  1-1-2-persist-message-history-with-audit-trails.md  1-1-3-preserve-context-across-agent-handoffs.md  1-2-1-issue-to-task-creation-and-tracking.md  1-2-2-associate-branches-and-pull-requests-with-tasks.md  1-2-3-enforce-task-state-transitions.md  1-3-1-agent-backend-registration-and-discovery.md  1-3-2-orchestrate-agent-turn-execution-and-sessions.md  1-4-1-slash-command-parsing.md  1-5-1-tenant-primitives-and-request-context-plumbing.md  1-5-2-deliver-tenant-aware-schema-and-constraints.md  2-1-1-canonical-message-format-and-validation.md  2-1-1-mcp-server-lifecycle-management.md  2-1-2-persist-message-history-with-audit-trails.md  2-1-2-tool-discovery-and-routing.md  2-1-3-preserve-context-across-agent-handoffs.md  2-2-1-issue-to-task-creation-and-tracking.md  2-2-2-associate-branches-and-pull-requests-with-tasks.md  2-2-3-enforce-task-state-transitions.md  2-3-1-agent-backend-registration-and-discovery.md  2-3-1-hook-engine-execution.md  2-3-2-hook-policy-enforcement-and-audit-capture-commands-and-checklist.md  2-3-2-hook-policy-enforcement-and-audit-capture-interface-spec.md  2-3-2-hook-policy-enforcement-and-audit-capture.md  2-3-2-orchestrate-agent-turn-execution-and-sessions.md  2-3-3-translate-tool-schemas-per-backend.md  2-4-1-slash-command-parsing.md  2-5-1-tenant-primitives-and-request-context-plumbing.md  3-1-1-mcp-server-lifecycle-management.md  3-1-2-tool-discovery-and-routing.md  3-2-1-expose-core-http-ap-is-for-conversations-and-tasks.md  3-3-1-hook-engine-execution.md  4-4-1-create-the-repository-owned-frontend-pwa.md  4-4-2-stabilize-the-slice-transport-contract-and-development-auth-seam.md  nile-valley-integration.md
docs/rfcs/: 0001-adopt-corbusier-front-end-pwa.md  0002-deliver-the-first-front-end-vertical-slice.md
frontend-pwa/: biome.json  index.html  package.json  playwright.config.ts  tsconfig.json  tsconfig.test.json  typedoc.json  vite.config.ts  vitest.a11y.config.ts  vitest.config.ts
frontend-pwa/scripts/: check-classlist-length.ts  check-hardcoded-strings.ts  check-locale-vars.ts  find-near-duplicate-classes.ts  run-audit.mjs
frontend-pwa/security/: audit-utils.js
frontend-pwa/src/: main.tsx
frontend-pwa/tests/: setup-vitest-a11y.ts
frontend-pwa/tools/: semantic-lint.config.json  semgrep-semantic.yml
migrations/2025-01-15-000000_create_base_tables/: down.sql  up.sql
migrations/2025-01-15-000001_add_message_uniqueness_constraints/: down.sql  up.sql
migrations/2025-01-16-000000_add_audit_trigger/: up.sql
migrations/2026-01-15-000000_create_base_tables/: up.sql
migrations/2026-01-15-000001_add_message_uniqueness_constraints/: down.sql  up.sql
migrations/2026-01-16-000000_add_audit_trigger/: down.sql
migrations/2026-02-03-000000_add_agent_sessions_and_handoffs/: down.sql  up.sql
migrations/2026-02-09-000000_add_tasks_table/: down.sql  up.sql
migrations/2026-02-11-000000_add_branch_pr_lookup_indexes/: down.sql  up.sql
migrations/2026-02-25-000000_add_backend_registrations_table/: down.sql  up.sql
migrations/2026-02-28-000000_add_mcp_servers_table/: down.sql  up.sql
migrations/2026-03-03-000000_add_agent_turn_sessions_table/: down.sql  up.sql
migrations/2026-03-03-000000_add_hook_executions_table/: down.sql  up.sql
migrations/2026-03-04-000000_add_tool_catalog_tables/: down.sql  up.sql
migrations/2026-03-06-000000_add_unique_active_session_per_conversation/: down.sql  up.sql
migrations/2026-03-10-000000_add_tenant_id_to_tool_registry/: down.sql  up.sql
scripts/: backfill_conversation_tenant_ids.sql  local_k8s.py
scripts/local_k8s/: __init__.py  cnpg.py  config.py  (+6 more)
src/: lib.rs  main.rs  postgres_support.rs  test_support.rs  worker.rs
tests/: agent_handoff_steps.rs  agent_turn_orchestration_scenarios.rs  backend_registration_scenarios.rs  conversation_history_steps.rs  hook_engine_execution_scenarios.rs  hook_policy_enforcement_scenarios.rs  http_api_surface_scenarios.rs  http_api_test_helpers.rs  in_memory.rs  in_memory_repository_integration.rs  mcp_server_lifecycle_steps.rs  message_validation_integration.rs  pg_worker_tests.rs  postgres.rs  postgres_repository_integration.rs  slash_command_steps.rs  task_branch_pr_association_steps.rs  task_issue_creation_steps.rs  task_state_transition_steps.rs  tenant_identity_scenarios.rs  tool_discovery_routing_steps.rs  worker_locator.rs
(+535 files in other folders)
