[package]
name = "corbusier"
version = "0.1.0"
edition = "2024"

[dependencies]
# Serialisation
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Date/time handling
chrono = { version = "0.4.43", features = ["serde"] }

# UUID generation
uuid = { version = "1.19.0", features = ["v4", "serde"] }

# Error handling
thiserror = "2.0.18"

# Async trait support
async-trait = "0.1.89"

# Clock abstraction for deterministic testing
mockable = { version = "3.0.0", default-features = false, features = ["clock"] }

# Database (Diesel ORM for PostgreSQL)
diesel = { version = "2.3.5", features = ["postgres", "uuid", "chrono", "serde_json", "r2d2"] }

# Capability-based filesystem access
cap-std = { version = "4.0.0", features = ["fs_utf8"] }

# Async runtime
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
# Embedded PostgreSQL support (test-only)
pg-embed-setup-unpriv = { version = "0.4.0", features = ["diesel-support", "async-api"] }
postgresql_embedded = "0.20.0"
rstest = "0.26.1"
rstest-bdd = "0.4.0"
rstest-bdd-macros = { version = "0.4.0", features = ["strict-compile-time-validation"] }
mockall = "0.14.0"
eyre = "0.6.12"
camino = "1.2.2"
once_cell = "1.20.3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

# 1. hygiene
allow_attributes                    = "deny"
allow_attributes_without_reason     = "deny"
blanket_clippy_restriction_lints    = "deny"
cognitive_complexity                = "deny"
needless_pass_by_value              = "deny"
implicit_hasher                     = "deny"

# 2. debugging leftovers
dbg_macro                           = "deny"
print_stdout                        = "deny"
print_stderr                        = "deny"

# 3. panic-prone operations
unwrap_used                         = "deny"
expect_used                         = "deny"
indexing_slicing                    = "deny"
string_slice                        = "deny"
integer_division                    = "deny"
integer_division_remainder_used     = "deny"
panic_in_result_fn                  = "deny"
unreachable                         = "deny"

# 4. portability
host_endian_bytes                   = "deny"
little_endian_bytes                 = "deny"
big_endian_bytes                    = "deny"

# 5. nursery idiom polish
let_underscore_must_use             = "deny"
or_fun_call                         = "deny"
option_if_let_else                  = "deny"
self_named_module_files             = "deny"
shadow_reuse                        = "deny"
shadow_same                         = "deny"
shadow_unrelated                    = "deny"
str_to_string                       = "deny"
string_lit_as_bytes                 = "deny"
try_err                             = "deny"
unneeded_field_pattern              = "deny"
use_self                            = "deny"

# 6. numerical foot-guns
float_arithmetic                    = "deny"
cast_possible_truncation            = "deny"
cast_possible_wrap                  = "deny"
cast_precision_loss                 = "deny"
lossy_float_literal                 = "deny"

# 7. API ergonomics
missing_const_for_fn                = "deny"
must_use_candidate                  = "deny"
unused_async                        = "deny"

# 8. Error handling
missing_panics_doc                  = "deny"
error_impl_error                    = "deny"
result_large_err                    = "deny"

[lints.rust]
missing_docs                        = "deny"

[lints.rustdoc]
missing_crate_level_docs            = "deny"
